--- a/index.html
+++ b/index.html
@@ -8,10 +8,19 @@
   <body>
 
     <div id="container">
+      <video id="video" width="320" height="240" autoplay></video>
+      <button id="snap">Snap Photo</button>
+      <div>
+        <span>Write desired locked urls separated by commas</span>
+        <textarea id="urlList" rows="8" cols="80"></textarea>
+        <button id="updateButton">Update Url List</button>
+      </div>
+      <!-- <canvas id="canvas" width="320" height="240"></canvas> -->
     </div>
 
     <!-- scripts -->
     <script src="assets/js/libs/jquery.min.js" type="text/javascript"></script>
     <script src="assets/js/main.js" type="text/javascript"></script>
+    <script src="assets/js/background.js" type="text/javascript"></script>
   </body>
 </html>
