[Feature | TruLock API Integration] This includes:
- Implementation of http request to truLock API
- Refactor of image fetching code

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <textarea id="urlList" rows="8" cols="80"></textarea>
         <button id="updateButton">Update Url List</button>
       </div>
-      <!-- <canvas id="canvas" width="320" height="240"></canvas> -->
+      <canvas id="canvas" width="320" height="240"></canvas>
     </div>
 
     <!-- scripts -->
