[FEATURE|WIP] Authentication functionality:
- Create authentication template and logic
- Redirect user to authentication page if trying to access locked url

--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <!-- <link rel="stylesheet" href="assets/css/style.css"> -->
     <title></title>
   </head>
   <body>
 
     <div id="container">
+      <h4 id="imageCount"></h4>
       <video id="video" width="320" height="240" autoplay></video>
       <button id="snap">Snap Photo</button>
       <div>
